--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,8 +2,8 @@
 <footer>
     <div class="container">
         <div class="row">
-            <div class="col-md-8">
-                <ul class="list-inline">
+            <div class="col-ft-1">
+                <!-- <ul class="list-inline">
                     <li>
                         <a href="#home">Home</a>
                     </li>
@@ -19,12 +19,19 @@
                     <li>
                         <a href="#contact">Contact</a>
                     </li>
-                </ul>
-                <p class="copyright text-muted small">Copyright &copy; {{ site.title }} All Rights Reserved</p>
+                </ul> -->
+
+                <p class="copyright text-muted small">
+                    <img src="../img/im-clean.png" width="150" height="100"/>
+                    Copyright &copy; {{ site.title }} All Rights Reserved
+                </p>
             </div>
-            <div class="col-md-4">
+            <div class="col-ft-1">
                 Credits: Landing Page is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com/">Start Bootstrap</a>.
             </div>
+            <!-- <div class="col-md-4">
+                Credits: Landing Page is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com/">Start Bootstrap</a>.
+            </div> -->
         </div>
     </div>
 </footer>
